--- a/package.json
+++ b/package.json
@@ -6,21 +6,34 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "graphql-codegen"
   },
   "dependencies": {
+    "@mantine/core": "^4.2.12",
+    "@mantine/form": "^4.2.12",
+    "@mantine/hooks": "^4.2.12",
+    "@mantine/next": "^4.2.12",
     "apollo-server-micro": "^3.9.0",
     "class-validator": "^0.13.2",
     "graphql": "^15.3.0",
+    "graphql-request": "^4.3.0",
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.1",
     "reflect-metadata": "^0.1.13",
+    "tabler-icons-react": "^1.52.0",
     "type-graphql": "^1.1.1"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.7.0",
+    "@graphql-codegen/typescript": "^2.6.0",
+    "@graphql-codegen/typescript-graphql-request": "^4.4.11",
+    "@graphql-codegen/typescript-operations": "^2.4.3",
+    "@graphql-codegen/typescript-react-query": "^3.5.15",
     "@types/node": "^18.0.1",
     "@types/react": "^18.0.14",
     "eslint": "8.19.0",
